turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:5: error: not found: value k
      if(k >= 180)
         ^