turtleart.circleying.CircleYing.scala.code
override def run() {
  for(i <- 1 to 2) {
    for(j<- 1 to 360) {
      avance(i)
      if(k >= 180)
      	gauche(1)
      droite(1)
    }
  }
}